--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,9 +12,19 @@
   },
   "dependencies": {
     "@convoai/ui": "workspace:*",
-    "next": "^15.4.2",
+    "@radix-ui/react-slot": "^1.2.3",
+    "better-auth": "^1.3.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.540.0",
+    "motion": "^12.23.12",
+    "next": "^15.4.3",
+    "radix-ui": "^1.4.3",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@convoai/eslint-config": "workspace:*",
@@ -22,7 +32,10 @@
     "@types/node": "^22.15.3",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.33.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "5.9.2"
   }
 }
