--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -13,8 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@convoai/typescript-config": "workspace:*",
-    "prisma": "6.14.0"
+    "@convoai/typescript-config": "workspace:*"
   },
   "dependencies": {
     "@prisma/client": "6.14.0",
